@@ -1,6 +1,6 @@
 #include_next <sys/file.h>
 
-#ifdef __FreeBSD_kernel__
+#if defined(__FreeBSD_kernel__) && !defined(__FREEBSD_GLUE_USE_EMBEDDED_HEADERS)
 #include <sys/kglue/sys/file.h>
 #else
 #ifndef _SYS_FILE_H_
