@@ -1,6 +1,6 @@
 #include_next <sys/time.h>
 
-# ifdef __FreeBSD_kernel__
+# if defined(__FreeBSD_kernel__) && !defined(__FREEBSD_GLUE_USE_EMBEDDED_HEADERS)
 #  include <sys/kern/time.h>
 # else
 #ifndef _SYS_TIME_H_
