@@ -1,4 +1,4 @@
-#ifdef __FreeBSD_kernel__
+#if defined(__FreeBSD_kernel__) && !defined(__FREEBSD_GLUE_USE_EMBEDDED_HEADERS)
 
 # include_next <sys/ttycom.h>
 
